# iic2685_lab3_shared

./: package.xml  setup.cfg  setup.py
iic2685_lab3/: exploration_navigator.py  likelihood.py  likelihood_map.py  localization_manager.py  map_publisher.py  motion_controller.py  navigator.py  navigator_mejorada.py  navigator_routine.py  particle_filter.py  particle_filter_mejorada.py  sensor_model.py  simple_navigator.py  simple_publisher.py  utils.py  visualization_manager.py  visualize_sensor_model.py  wall_follower.py
launch/: launch1.xml  localization.xml  localization_launch.xml  localization_mejorada.xml  simple_localization.xml
rviz/: configuration.rviz  localization.rviz  simple_configuration.rviz
